@startuml

title __THREADS's Class Diagram__\n

  namespace threads {
    class threads.Receiver {
        - reader : BufferedReader
        + Receiver()
        + run()
        + setSender()
        - getMessage()
    }
  }
  

  namespace threads {
    class threads.Sender {
        ~ outputStream : OutputStream
        ~ socket : Socket
        + Sender()
        + broadcast()
        + login()
        + logout()
        + pong()
        + send()
        + sendFile()
    }
  }
  

  threads.Receiver o-- controllers.Controller : controller
  threads.Receiver o-- threads.Sender : sender
  threads.Receiver o-- model.User : user
  threads.Sender o-- controllers.Controller : controller
  threads.Sender o-- threads.Receiver : receiver
  threads.Sender o-- model.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
